--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ button:nth-child(2):hover{
     box-shadow: 0 0 1rem #fff, inset 0 0 1rem #fff,0 0 2rem #3877ff, inset 0 0 2rem #3877ff,
     0 0 4rem #3877ff, inset 0 0 4rem #3877ff;
 
-}.navlist li a::after, .navlist .active::after {
+/*}.navlist li a::after, .navlist .active::after {
     content: "";
     position: absolute;
     background: #fff;
@@ -152,4 +152,4 @@ button:nth-child(2):hover{
   .navlist li a:hover::after, .navlist .active::after {
     transform: scaleX(1);
     transform-origin:bottom left;
-  }
+  }*/
